# deltahacks-xii

./: .gitignore  README.md  package-lock.json
backend/: .env.example  README.md  backend-JSON-spec.md  curl.md  db.json  dummy-queue.json  example.json  flush.py  main.py  pinecone.py  pyproject.toml  redis_client.py  sample_incidents.json  schemas.py  static_additions.py  test_pinecone_fetch.py  transcribe_audio.py  vector_store.py
client/: README.md  impl.md  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/config/: page.tsx
client/app/dashboard/: page.tsx
client/components/: ActiveCall.tsx  CallDetails.tsx  DispatcherStatus.tsx  Queue.tsx  Sidebar.tsx  Transcript.tsx
client/components/generic/: QueuedCall.tsx  TranscriptionLine.tsx
client/copy/components/: CallDetails.tsx  DispatcherStatus.tsx  Queue.tsx
client/hooks/: useDispatchers.ts
client/lib/: api.ts  mock-data.ts  ulid.ts
frontend/: package.json  pnpm-lock.yaml  spec-impl.md  trace.md
frontend/app/: page.tsx
frontend/app/config/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ActiveCall.tsx  CallDetails.tsx  DispatcherStatus.tsx  Queue.tsx  Sidebar.tsx  Transcript.tsx  TranscriptionLine.tsx
frontend/components/generic/: QueuedCall.tsx  QueuedCallSkeleton.tsx  TranscriptionLine.tsx
frontend/copy/: README.md
frontend/copy/app/: layout.tsx
frontend/copy/components/: Transcript.tsx
frontend/copy/hooks/: useDispatchers.ts
frontend/hooks/: useDispatchers.ts
frontend/lib/: api.ts
frontend/providers/: QueryProvider.tsx
(+6 files in other folders)
