[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langchain-pinecone>=0.2.13",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
